# panache

./: .gitignore  AOShellCombinationsIterator.cc  BasisSet.cc  BasisSet.h  BasisSetParser.cc  BasisSetParser.h  CMakeLists.txt  CharacterTable.cc  CharacterTable.h  CoordEntry.h  DFTensor.cc  DFTensor.h  Dimension.cc  Dimension.h  Doxyfile  ERDERI.cc  ERDTwoElectronInt.cc  ERDTwoElectronInt.h  ERI.cc  ERI.h  ERI2.cc  ERI2.h  Exception.h  FittingMetric.cc  FittingMetric.h  Fjt.cc  Fjt.h  GaussianShell.cc  GaussianShell.h  INSTALL  IntegralParameters.cc  IrreducibleRepresentation.h  Lapack.cc  Lapack.h  Libint2ERI.cc  Libint2ERI.h  Libint2TwoElectronInt.cc  Libint2TwoElectronInt.h  LibintERI.cc  LibintERI.h  (+56 more)
basis/: test.basis
cmake/: Restrict.cmake
dox/: compiling.dox  features.dox  groups.dox  mainpage.dox  testing.dox  theory.dox  using.dox  using_c.dox  using_cpp.dox  using_cpp_iterators.dox  using_fortran.dox
examples/: CMakeLists.txt  common_cpp.cc  common_cpp.h  common_f90.f90  example_cpp.cc  example_cpp_iterators.cc  example_f90.f90  fruntest.f90
liberd/: CMakeLists.txt
old/: ObaraSaikaTwoCenterRecursion.cc  SlowERI.h
panache/: .CMakeLists.txt.swp  AOIntegralsIterator.cc  AOIntegralsIterator.h  AOShellCombinationsIterator.cc  AOShellCombinationsIterator.h  BasisFunctionMacros.h  BasisSet.cc  BasisSet.h  BasisSetParser.cc  BasisSetParser.h  CHTensor.cc  CHTensor.h  CMakeLists.txt  CNorm.h  CNormalization.h  CartesianIter.cc  CartesianIter.h  CharacterTable.cc  CoordEntry.cc  DFTensor.cc  DFTensor.h  DFTensor2.cc  DFTensor2.h  DFTensor2_StoredQTensor.cc  DFTensor_CyclopsQTensor.cc  DFTensor_StoredQTensor.cc  ERDERI.cc  ERDERI.h  ERDTwoElectronInt.cc  ERDTwoElectronInt.h  ERI.h  Element_to_Z.h  Exception.h  FittingMetric.cc  FittingMetric.h  Fjt.cc  Fjt.h  Flags.h  GaussianShell.cc  GaussianShell.h  (+72 more)
panache/fortran/: fortran_interface.f90
panache/old/: KineticInt.cc  KineticInt.h  ObaraSaikaTwoCenterRecursion.h  OneBodyAOInt.cc  OneBodyAOInt.h  Overlap.cc  Overlap.h  SlowTwoElectronInt.h
panache/ordering/: DALTON.h  GAMESS.h
panache/storedqtensor/: CyclopsQTensor.cc  CyclopsQTensor.h  DiskQTensor.cc  DiskQTensor.h  LocalQTensor.cc  LocalQTensor.h  MemoryQTensor.cc  MemoryQTensor.h  StoredQTensor.cc  StoredQTensor.h  StoredQTensorFactory.cc  StoredQTensorFactory.h
panache/tensorbackend/: CyclopsQTensor.cc  CyclopsQTensor.h  DiskQTensor.cc  DiskQTensor.h  FourIndexTensor.cc  FourIndexTensor.h  Local4IndexTensor.cc  Local4IndexTensor.h  LocalQTensor.cc  LocalQTensor.h  MemoryQTensor.cc  MemoryQTensor.h  StoredQTensor.cc  StoredQTensorFactory.cc  StoredQTensorFactory.h
paper/: panache.bbl  panache.tex  references.bib
paper/images/: panacheoverview.eps  storedqtensor.eps  threeindextensor.eps
runtest/: CMakeLists.txt  fruntest.f90  runtest.cc
scripts/: benchmark.py  runalltests.sh  runtest.sh
testfiles/: README  generate_basis.py  generate_mol.py
testfiles/dmo-631gss/: basis.aux  basis.aux.gbs  basis.primary  chqso  cmat  desc  orben  qmo  qoo  qov  qso  qvv
testfiles/dmo-aug-cc-pvdz/: basis.aux  basis.aux.gbs  basis.primary  chqso  cmat  desc  geometry  orben  qmo  qoo  qov  qso  qvv
testfiles/dmo-aug-cc-pvtz/: basis.primary  chqso  cmat  desc  orben  qmo  qoo  qov  qso  qvv
testfiles/dmo-sto3g/: basis.primary  chqso  cmat  desc  orben  qmo  qoo  qov  qso  qvv
testfiles/h2o-631gs/: chqso  qso  qvv
testfiles/h2o-631gss/: basis.aux  basis.primary  chqso  cmat  desc  geometry  qmo  qoo  qso  qvv
testfiles/h2o-631gss-cartgeo/: basis.primary  cmat  geometry  qmo  qoo
testfiles/h2o-aug-cc-pvdz/: basis.aux  basis.primary  chqso  desc  qmo  qoo  qov  qso  qvv
testfiles/h2o-aug-cc-pvtz/: basis.aux  cmat  desc  qov  qso  qvv
testfiles/h2o-sto3g/: basis.primary  chqso  qov  qso  qvv
testfiles/h2o_old/h2o-631gs/: basis.primary  cmat  desc  qmo  qoo  qov
testfiles/h2o_old/h2o-631gss/: qov  qso
testfiles/h2o_old/h2o-631gss-cartgeo/: qov  qso  qvv
testfiles/h2o_old/h2o-aug-cc-pvdz/: cmat  qso
testfiles/h2o_old/h2o-aug-cc-pvtz/: basis.primary  chqso  qmo  qoo
testfiles/h2o_old/h2o-sto3g/: cmat  desc  geometry  qmo  qoo  qso
